@@ -23,22 +23,22 @@ RECAPTCHA_PUBLIC_KEY = '6LeYIbsSAAAAACRPIllxA7wvXjIE411PfdB2gt2J'
 RECAPTCHA_PRIVATE_KEY = '6LeYIbsSAAAAAJezaIq3Ft_hSTo0YtyeFG-JgRtu'
 RECAPTCHA_OPTIONS = {'theme': 'white'}
 
-#: Flask-Security config
+#: Flask-Security 配置
 SECURITY_TRACKABLE = True
 SECURITY_CONFIRMABLE = False
 SECURITY_RECOVERABLE = True
 SECURITY_CHANGEABLE = True
-# 登陆时可以选用的字段
+# 登陆时可以使用的字段
 SECURITY_USER_IDENTITY_ATTRIBUTES = ['email','username']
 #修改密码后不发邮件
 SECURITY_SEND_PASSWORD_CHANGE_EMAIL =  False
 SECURITY_URL_PREFIX = '/security'
 SECURITY_POST_LOGIN_VIEW = '/qingbank/'
 SECURITY_POST_LOGOUT_VIEW = '/qingbank/'
-SECURITY_MSG_LOGIN = (u'请登陆来后再访问这个页面', 'info')
+SECURITY_MSG_LOGIN = (u'请先登陆', 'info')
 # 可以注册
 SECURITY_REGISTERABLE = True
-SECURITY_SEND_REGISTER_EMAIL = False
+SECURITY_SEND_REGISTER_EMAIL = True
 SECURITY_TOKEN_AUTHENTICATION_HEADER = 'auth_token'
 SECURITY_TOKEN_AUTHENTICATION_KEY = 'auth_token'
 
@@ -48,3 +48,19 @@ BABEL_DEFAULT_TIMEZONE = 'UTC'
 #related command-working dir: app
 # 抽取: pybabel extract -F babel.cfg -o messages.pot .
 # 生成：pybabel init -i messages.pot -d frontend/translations -l cs
+
+# Flask-Mail的配置
+# MAIL_DEFAULT_SENDER = 'kikycen@163.com'
+# MAIL_SERVER = 'smtp.163.com'
+# MAIL_PORT = 25
+# MAIL_USE_TLS = True
+# MAIL_USERNAME = 'kikycen@163.com'
+# MAIL_PASSWORD = 'cenkiky'
+
+MAIL_DEFAULT_SENDER = "luyasi hello"
+MAIL_SERVER = 'smtp.gmail.com'
+MAIL_PORT = 587
+MAIL_USE_TLS = True
+MAIL_USE_SSL = False
+MAIL_USERNAME = 'kinorsi@gmail.com'
+MAIL_PASSWORD = 'www.gmail.com'
