@@ -13,7 +13,21 @@ from ..security.models import Role, User
 # 控制管理面板FLask-Admin的权限
 class AuthModelView(ModelView):
     def is_accessible(self):
-        return current_user.has_role('管理员')
+        return  current_user.has_role('管理员')
+        #return  current_user.is_authenticated() #最好用角色
+
+class UserView(AuthModelView):
+    column_searchable_list = ('email', 'username',)
+
+    def __init__(self):
+        super(UserView, self).__init__(User, db.session, name='Users', endpoint='users', category='User Manage')
+
+class RoleView(AuthModelView):
+    column_searchable_list = ('name',)
+
+    def __init__(self):
+        super(RoleView, self).__init__(Role, db.session, name="Roles", endpoint="roles", category='User Manage')
+
 
 def create_app(settings_override=None):
     app = appfactory.create_app(__name__, __path__, settings_override)
@@ -22,8 +36,8 @@ def create_app(settings_override=None):
     # assets.init_app(app)
 
     # init Flask-Admin views
-    admin.add_view(AuthModelView(User, db.session, name="Users", endpoint="users", category='User Manage'))
-    admin.add_view(AuthModelView(Role, db.session, name="Roles", endpoint="roles", category='User Manage'))
+    admin.add_view(UserView())
+    admin.add_view(RoleView())
     admin.add_view(AuthModelView(Contact,db.session, name='Contacts', endpoint='contacts', category='Qingbank'))
     admin.add_view(AuthModelView(Department,db.session, name='Departments', endpoint='departments', category='Qingbank'))
 
