@@ -1,0 +1,18 @@
+{% extends 'admin/base.html' %}
+
+{% block access_control %}
+{% if current_user and current_user.is_authenticated() %}
+<div class="btn-group pull-right">
+    <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+        <i class="icon-user"></i> {{ current_user }} <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+        <li><a href="{{ url_for_security('logout') }}">退出</a></li>
+    </ul>
+</div>
+{% else %}
+<div class="btn-group pull-right">
+    <a href="{{url_for_security('login')}}" class="btn btn-primary" role="button">登陆</a>
+</div>
+{% endif %}
+{% endblock %}
