@@ -3,7 +3,7 @@
 <div class="form-group">
     {{field.label(class="control-label col-sm-4")}}
     <div class="col-sm-8">
-      {{ gettext(field.name)}}
+      <!--{{ gettext(field.label)}}-->
       {{ field(class="form-control") }}
     </div>  
 </div>
