@@ -4,8 +4,6 @@
 
 {% block container %}
 <div class='row'>
-	<h1>测试{{ gettext('A simple string') }}</h1>
-	<h1>测试{{ gettext('enghli') }}</h1>
 	<div class="col-md-8">
 		{% include "security/_messages.html" %}		
 	</div>
