@@ -1,0 +1,5 @@
+#-*- coding:utf-8 -*-
+from flask.ext.wtf import Form
+from wtforms.fields import TextField
+from wtforms.validators import Length
+
