@@ -1,1 +1,5 @@
+
+1.增加flask-admin的登陆和退出
+2.增加user,role的查询功能
+----------------------------------------------------------------
 1. add support for i18n
